--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=containers-us-west-xxx.up.railway.app
-DB_USER=admin
-DB_PASSWORD=Jositas123?
-DB_NAME=my_orders
+DB_HOST=mysql.railway.internal
+DB_USER=root
+DB_PASSWORD=HmmHIFpJjgmAqiOrAzWeNoKhpLAZHeCF
+DB_NAME=railway
 DB_PORT=3306
 PORT=4000
